--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "firebase": "^7.12.0",
     "mdbvue": "6.2.0",
     "vue": "^2.6.11",
