--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "element-ui": "^2.4.5",
     "firebase": "^7.12.0",
     "mdbvue": "6.2.0",
     "vue": "^2.6.11",
@@ -34,6 +35,7 @@
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-bootstrap-vue": "^0.7.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-fontawesome": "^0.3.1",
     "vue-cli-plugin-mdb": "^2.1.0",
     "vue-cli-plugin-vuefire": "^1.0.2",
