--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "bootstrap-vue": "^2.17.3",
+    "circular-json": "^0.5.9",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "element-ui": "^2.4.5",
@@ -20,7 +21,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
