Finito il CRUD per le persone

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "bootstrap-vue": "^2.17.3",
-    "circular-json": "^0.5.9",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "element-ui": "^2.4.5",
     "firebase": "^7.12.0",
     "mdbvue": "6.2.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.2",
