--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mdbvue": "6.2.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.2",
     "vuex": "^3.4.0",
